--- a/doc/releases/8_0.md
+++ b/doc/releases/8_0.md
@@ -20,6 +20,16 @@ See [GitLab 17 changes](https://docs.gitlab.com/ee/update/versions/gitlab_17_cha
 To upgrade to the `8.0` version of the chart, you first need to upgrade to the latest `7.11.x`
 release of the chart. Check the [version mapping details](../installation/version_mappings.md) for the latest patch.
 
+### Upgrade to 8.6.0
+
+The `app` label of the Job that performs the database migrations for the registry metadata database has
+been changed from `registry` to `registry-migrations` to address issues with the selectors of the
+container registry `Deployment` and `PodDisruptionBudget`.
+
+If you don't have the registry metadata database enabled, or don't use it in any external tools
+such as monitoring or logging solutions, you don't need to do anything. If you do use this label,
+please update it accordingly.
+
 ### Upgrade to 8.6.x, 8.5.1, 8.4.3, 8.3.6
 
 If you haven't modified the GitLab chart `nginx-ingress.rbac.create` value, or it's set to `true`,
